--- a/src/CSS/pelicula.css
+++ b/src/CSS/pelicula.css
@@ -23,6 +23,7 @@
   justify-content: center;
   align-items: center;
   transition: opacity 0.3s ease-in-out;
+  text-overflow: ellipsis;
 }
 
 .card:hover .card-body {
