--- a/src/CSS/pelicula.css
+++ b/src/CSS/pelicula.css
@@ -26,6 +26,11 @@
   text-overflow: ellipsis;
 }
 
+.card-body p {
+  display: -webkit-box;
+  -webkit-line-clamp: 7;
+}
+
 .card:hover .card-body {
   opacity: 1;
 }
