--- a/src/CSS/navbar.css
+++ b/src/CSS/navbar.css
@@ -7,6 +7,10 @@
     color: white;
 }
 
-.navbar-brand:hover {
-    color: #00d5ffbe;
+.navbar-custom .navbar-brand:hover {
+    color: #00d4ff;
+}
+
+.navbar-custom .navbar-nav .nav-link:hover {
+    color: #00d4ff;
 }
