--- a/src/CSS/resumen.css
+++ b/src/CSS/resumen.css
@@ -10,7 +10,7 @@
 
 .custom-titulo {
     padding-top: 10px;
-    padding: 10px 5px 19px 5px;
+    padding: 10px;
     display: flex;
     align-items: center;
 }
