--- a/src/CSS/resumen.css
+++ b/src/CSS/resumen.css
@@ -13,6 +13,11 @@
     padding: 10px;
     display: flex;
     align-items: center;
+    font-weight: bold;
+}
+
+.custom-titulo {
+    font-size: 19px;
 }
 
 .custom-back-btn {
@@ -29,4 +34,18 @@
 
 .info-bol-as {
     border-top: 1px solid #ccc;
+}
+
+.movie-poster {
+    max-width: 100%;
+    max-height: 250px;
+    object-fit: contain;
+}
+
+.div-poster {
+    padding: 2px 0px 2px 2px !important;
+}
+
+.div-info {
+    padding: 2px po !important;
 }
