--- a/src/CSS/pasoboletos.css
+++ b/src/CSS/pasoboletos.css
@@ -14,17 +14,21 @@
 }
 
 .custom-btn-success {
-    background-color: #3988d1;
-    border-color: black;
-    border-radius: 5px;
+    color: white;
+    background-color: rgb(0, 56, 99);
+    border: none;
+    outline: none;
+    border-radius: 50px;
     padding: 4px 48px 4px 48px;
     font-size: 24px;
     margin-top: 50px;
+    align-items: center;
 }
 
 .custom-btn-success:hover {
-    background-color: #1889f3;
-    border-color: black;
+    background-color: #055eb1;
+    color: white;
+    transition: 0.25s;
 }
 
 .custom-btn {
