--- a/src/CSS/resumen.css
+++ b/src/CSS/resumen.css
@@ -38,14 +38,20 @@
 
 .movie-poster {
     max-width: 100%;
-    max-height: 250px;
+    max-height: 300px;
     object-fit: contain;
 }
 
 .div-poster {
-    padding: 2px 0px 2px 2px !important;
+    padding: 2px 0px 10px 12px !important;
 }
 
 .div-info {
-    padding: 2px po !important;
+    padding: 4px !important;
+}
+
+.custom-border {
+    border: 1px solid #ccc;
+    border-radius: 0.25rem;
+    padding: 10px;
 }
