--- a/src/CSS/pasoboletos.css
+++ b/src/CSS/pasoboletos.css
@@ -19,10 +19,10 @@
     border: none;
     outline: none;
     border-radius: 50px;
-    padding: 4px 48px 4px 48px;
+    padding: 4px 48px 6px 48px;
     font-size: 24px;
     margin-top: 50px;
-    align-items: center;
+    text-align: center;
 }
 
 .custom-btn-success:hover {
