--- a/src/CSS/anular.css
+++ b/src/CSS/anular.css
@@ -37,5 +37,5 @@
 }
 
 .reset-card-styles .accordion-button button {
-  margin-right: 10px; /* Puedes ajustar este valor según tus preferencias */
+  margin-right: 10px; 
 }
