--- a/src/CSS/butacahora.css
+++ b/src/CSS/butacahora.css
@@ -1,7 +1,7 @@
 .reset-card-styles .accordion-button button {
-    margin-right: 10px; /* Puedes ajustar este valor según tus preferencias */
+    margin-right: 10px; 
   }
 
 .reset-card-styles .accordion-body button {
-margin-right: 10px; /* Puedes ajustar este valor según tus preferencias */
+margin-right: 10px; 
 } 
